# bayes_people_tracker

./: LICENSE  package.xml
bayes_people_tracker/: .gitignore  CMakeLists.txt  package.xml
bayes_people_tracker/config/: detectors.yaml  detectors_no_leg_detector.yaml  detectors_test.yaml
bayes_people_tracker/include/bayes_people_tracker/: people_tracker.h
bayes_people_tracker/include/people_tracker/: people_tracker.h  simple_tracking.h
bayes_people_tracker/launch/: people_tracker.launch
bayes_people_tracker/src/bayes_people_tracker/: people_tracker.cpp
bayes_people_tracker/src/people_tracker/: people_tracker.cpp
bayes_people_tracker_msgs/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  package.xml
bayes_people_tracker_msgs/msg/: FacePosition.msg  FacePositionArray.msg  PeopleTrackerImage.msg  PeopleWithFace.msg  PeopleWithHead.msg  PersonImage.msg
config/: detectors.yaml
detector_msg_to_pose_array/config/: detectors.yaml
detector_msg_to_pose_array/launch/: to_pose_array.launch
detector_msg_to_pose_array/scripts/: to_pose_array.py
launch/: people_tracker.launch  tiago_track_legs.launch
yolox_people_detection/: CMakeLists.txt  README.md  package.xml
yolox_people_detection/launch/: yolox_people_detection.launch
yolox_people_detection/scripts/: yolox_person_detection_node
yolox_people_tracker/launch/: yolox_l.launch
yolox_people_tracker/scripts/: yolox_person_recognition_node
