<?xml version="1.0"?>
<package>
  <name>bayes_people_tracker_msgs</name>
  <version>0.0.0</version>
  <description>The bayes_people_tracker_msgs package</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>

  <author email="dleins@techfak.uni-bielefeld.de">David Leins</author> 

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <rund_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export/>
</package>
