<?xml version="1.0"?>
<package>
  <name>bayes_people_tracker_msgs</name>
  <version>1.8.0</version>
  <description>The bayes_people_tracker_msgs package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
